plugins {
    id 'java'
    id 'maven-publish'
    id("com.gradleup.shadow") version "9.0.0-beta8"
}


def name = 'Shardify'
def artifactId = 'shardify-load'
def groupId = 'it.mathsanalysis.load'

group = 'it.mathsanalysis.load'
version = '1.0.0'


java {
    toolchain.languageVersion.set(JavaLanguageVersion.of(23))
}

tasks.withType(Test).configureEach {
    jvmArgs += '--enable-preview'
    useJUnitPlatform()
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += ['--enable-preview']
    options.release = 23
}

repositories {
    mavenCentral()
}

dependencies {
    compileOnly 'io.micrometer:micrometer-core:1.16.0-M1'

    compileOnly 'org.projectlombok:lombok:1.18.38'
    annotationProcessor 'org.projectlombok:lombok:1.18.38'

    implementation 'com.zaxxer:HikariCP:7.0.0'
    implementation 'net.sf.trove4j:core:3.1.0'
    implementation 'it.unimi.dsi:fastutil:8.5.16'
    implementation 'com.github.ben-manes.caffeine:caffeine:3.2.2'

    implementation 'ch.qos.logback:logback-classic:1.5.18'
    implementation 'org.springframework.boot:spring-boot-starter:4.0.0-M1'
    implementation 'org.springframework.boot:spring-boot-autoconfigure:4.0.0-M1'
}

tasks {
    compileJava {
        dependsOn clean
        options.encoding = 'UTF-8'
    }

    build {
        dependsOn shadowJar
        dependsOn publish
    }
}

shadowJar {
    archiveFileName = name + '-' + version + '.jar'
    minimize()
}

jar{
    archiveFileName = name + '-' + version + '.jar'
}


publishing {
    publications {
        maven(MavenPublication) {
            groupId = groupId
            artifactId = artifactId

            from components.java
        }
    }
}


